@@ -1,6 +1,7 @@
 48
 ================
 
+20/09/23 adoptable_js: site dropdown/filter
 19/09/23 type hints, publisher package upto homeagain #1320
 19/09/23 type hints, paymentprocessor package #1320
 19/09/23 type hints, dbms package #1320
